# Raccoon-Dash

./: .replit  app.py  pyproject.toml
static/: news.css
templates/: index.html  news.html
