[tool.poetry]
name = "repl-nix-raccoon-dash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_raccoon_dash"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
feedparser = "^6.0.11"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
